@@ -1,3 +1,8 @@
+2003-07-27  Andrew Cagney  <cagney@redhat.com>
+
+	* gdb.base/fileio.exp: Use SH when running commands using
+	remote_exec.
+
 2003-07-22  Andreas Schwab  <schwab@suse.de>
 
 	* gdb.asm/powerpc.inc (gdbasm_startup): Force alignment.
